--- a/Drimmelen/email.mjml
+++ b/Drimmelen/email.mjml
@@ -1,22 +1,125 @@
 <mjml>
-  <mj-head>
-    <mj-font name="Figtree" href="https://fonts.googleapis.com/css?family=Figtree:400,600,700,900" />
-    <mj-html-attributes>
-      <mj-selector path=".lp-logo img">
-        <mj-html-attribute name="lp-logo"></mj-html-attribute>
-      </mj-selector>
-      <mj-selector path=".lp-edit img">
-        <mj-html-attribute name="lp-edit"></mj-html-attribute>
-      </mj-selector>
-    </mj-html-attributes>
-    <mj-attributes>
-      <mj-all padding="0" />
-    </mj-attributes>
-    <mj-style inline="inline"> h1 { font-family: Figtree; font-size: 40px; font-weight: 500; line-height: 48px; } h2 { font-family: Figtree; font-size: 32px; font-weight: 500; line-height: 38px; } h3 { font-family: Figtree; font-size: 28px; font-weight: 700; line-height: 34px; } h4 { font-family: Figtree; font-size: 24px; font-weight: 700; line-height: 28px; } h5 { font-family: Figtree; font-size: 20px; font-weight: 700; line-height: 24px; } h6 { font-family: Figtree; font-size: 16px; font-weight: 700; line-height: 24px; } </mj-style>
-    <mj-style> H1, H2, H3, H4, H5, H6 { margin: 0 !important; padding: 0 !important; } a:-webkit-any-link, a:link { color: inherit } a { color: #30579e !important; } .cta-button a { color: #ffffff !important; } a[x-apple-data-detectors] { color: #30579e !important; font-size: inherit !important; font-family: inherit !important; font-weight: inherit !important; line-height: inherit !important; } u + #body a { color: #30579e !important; font-size: inherit !important; font-family: inherit !important; font-weight: inherit !important; line-height: inherit !important; } #MessageViewBody a { color: #30579e !important; font-size: inherit !important; font-family: inherit !important; font-weight: inherit !important; line-height: inherit !important; } .cta-button td a[x-apple-data-detectors] { color: #ffffff !important; font-size: inherit !important; font-family: inherit !important; font-weight: inherit !important; line-height: inherit !important; } u + #body .cta-button td a { color: #ffffff !important; font-size: inherit !important; font-family: inherit !important; font-weight: inherit !important; line-height: inherit !important; } #MessageViewBody .cta-button td a { color: #ffffff !important; font-size: inherit !important; font-family: inherit !important; font-weight: inherit !important; line-height: inherit !important; } @media screen and (max-width:700px) { .inline-image { display: block !important; float: none !important; max-width: 100% !important; } table[class="lp-image-wrapper"] { width:100% !important; } td[class="lp-image-wrapper-h"] { display: none !important; } td[class="lp-image-wrapper-img"] { display: block !important; width: 100% !important; overflow: auto !important; } img[class="lp-multiline-image"] { width: 100% !important; height: auto !important; margin: 0 !important; } } </mj-style>
-    <mj-breakpoint width="700px" />
-  </mj-head>
-  <mj-body background-color="#ffffff" width="700px">
+    <mj-head>
+      <mj-font name="Figtree" href="https://fonts.googleapis.com/css?family=Figtree:400,600,700,900" />
+      <mj-html-attributes>
+        
+        <mj-selector path=".lp-logo img">
+          <mj-html-attribute name="lp-logo"></mj-html-attribute>
+        </mj-selector>
+      
+        <mj-selector path=".lp-edit img">
+          <mj-html-attribute name="lp-edit"></mj-html-attribute>
+        </mj-selector>
+      
+      </mj-html-attributes>
+      <mj-attributes>
+        <mj-all padding="0" />
+      </mj-attributes>
+      <mj-style inline="inline">
+        body { font-family: Figtree, Arial, sans-serif; }
+        h1 { font-family: Figtree, Arial, sans-serif; font-size: 40px; font-weight: 500; line-height: 48px; }
+        h2 { font-family: Figtree, Arial, sans-serif; font-size: 32px; font-weight: 500; line-height: 38px; }
+        h3 { font-family: Figtree, Arial, sans-serif; font-size: 28px; font-weight: 700; line-height: 34px; }
+        h4 { font-family: Figtree, Arial, sans-serif; font-size: 24px; font-weight: 700; line-height: 28px; }
+        h5 { font-family: Figtree, Arial, sans-serif; font-size: 20px; font-weight: 700; line-height: 24px; }
+        h6 { font-family: Figtree, Arial, sans-serif; font-size: 16px; font-weight: 700; line-height: 24px; }
+      </mj-style>
+      <mj-style>
+        H1, H2, H3, H4, H5, H6 {
+          margin: 0 !important;
+          padding: 0 !important;
+        }
+
+        a:-webkit-any-link,
+        a:link {
+          color: inherit
+        }
+
+        a {
+          color: #30579e !important;
+        }
+
+        .cta-button a {
+          color: #ffffff !important;
+        }
+
+        a[x-apple-data-detectors] {
+          color: #30579e !important;
+          font-size: inherit !important;
+          font-family: inherit !important;
+          font-weight: inherit !important;
+          line-height: inherit !important;
+        }
+        u + #body a {
+          color: #30579e !important;
+          font-size: inherit !important;
+          font-family: inherit !important;
+          font-weight: inherit !important;
+          line-height: inherit !important;
+        }
+        #MessageViewBody a {
+          color: #30579e !important;
+          font-size: inherit !important;
+          font-family: inherit !important;
+          font-weight: inherit !important;
+          line-height: inherit !important;
+        }
+
+        .cta-button td a[x-apple-data-detectors] {
+          color: #ffffff !important;
+          font-size: inherit !important;
+          font-family: inherit !important;
+          font-weight: inherit !important;
+          line-height: inherit !important;
+        }
+        u + #body .cta-button td a {
+          color: #ffffff !important;
+          font-size: inherit !important;
+          font-family: inherit !important;
+          font-weight: inherit !important;
+          line-height: inherit !important;
+        }
+        #MessageViewBody .cta-button td a {
+          color: #ffffff !important;
+          font-size: inherit !important;
+          font-family: inherit !important;
+          font-weight: inherit !important;
+          line-height: inherit !important;
+        }
+
+        @media screen and (max-width:700px) {
+          .inline-image {
+            display: block !important;
+            float: none !important;
+            max-width: 100% !important;
+          }
+
+          table[class="lp-image-wrapper"] {
+            width:100% !important;
+          }
+
+          td[class="lp-image-wrapper-h"] {
+            display: none !important;
+          }
+
+          td[class="lp-image-wrapper-img"] {
+            display: block !important;
+            width: 100% !important;
+            overflow: auto !important;
+          }
+
+          img[class="lp-multiline-image"] {
+            width: 100% !important;
+            height: auto !important;
+            margin: 0 !important;
+          }
+        }
+
+
+      </mj-style>
+      <mj-breakpoint width="700px" />
+    </mj-head>
+    <mj-body background-color="#ffffff" width="700px">
     <mj-raw>
       <lp-layout lp-label="Weblink">
     </mj-raw>
@@ -45,7 +148,7 @@
     <mj-section background-color="#ffffff" padding="0px 24px 0px 24px">
       <mj-group>
         <mj-column padding="24px 0px 24px 0px" vertical-align="top">
-          <mj-image src="./I136_840_79_219_52_69.png" alt="" css-class="lp-logo" align="left" border-radius="8px" width="198px">
+          <mj-image src="./images/I136_840_79_219_52_69.png" alt="" css-class="lp-logo" align="left" border-radius="8px" width="198px">
           </mj-image>
         </mj-column>
         <mj-column padding="24px 0px 24px 0px" vertical-align="top">
@@ -66,7 +169,7 @@
     </mj-raw>
     <mj-section full-width="full-width" background-color="#beddfc" padding="24px 24px 24px 24px">
       <mj-column vertical-align="top">
-        <mj-image src="./I136_841_79_239_2004_984.png" alt="" css-class="lp-edit" fluid-on-mobile="true" align="left" border-radius="32px 0px 0px 0px" width="652px">
+        <mj-image src="./images/I136_841_79_239_2004_984.png" alt="" css-class="lp-edit" fluid-on-mobile="true" align="left" border-radius="32px 0px 0px 0px" width="652px">
         </mj-image>
       </mj-column>
     </mj-section>
@@ -84,13 +187,13 @@
           </H3>
         </mj-text>
         <mj-text padding="0px 0px 4px 0px" color="#30579e" font-size="16px" font-family="Figtree, Arial, sans-serif" font-weight="400" line-height="24px" align="left" text-decoration="none">
-          <lp-singleline><img class="inline-image" src="./I136_842_65_138_37_112_37_110.png" width="16" height="24" align="left" style="margin-right:10px;" lp-edit lp-resizable /> Lorem ipsum dolor sit amet.</lp-singleline>
+          <lp-singleline><img class="inline-image" src="./images/I136_842_65_138_37_112_37_110.png" width="16" height="24" align="left" style="margin-right:10px;" lp-edit lp-resizable /> Lorem ipsum dolor sit amet.</lp-singleline>
         </mj-text>
         <mj-text padding="0px 0px 4px 0px" color="#30579e" font-size="16px" font-family="Figtree, Arial, sans-serif" font-weight="400" line-height="24px" align="left" text-decoration="none">
-          <lp-singleline><img class="inline-image" src="./I136_842_115_903_37_112_37_110.png" width="16" height="24" align="left" style="margin-right:10px;" lp-edit lp-resizable /> Consectetur adipiscing elit, sed do.</lp-singleline>
+          <lp-singleline><img class="inline-image" src="./images/I136_842_115_903_37_112_37_110.png" width="16" height="24" align="left" style="margin-right:10px;" lp-edit lp-resizable /> Consectetur adipiscing elit, sed do.</lp-singleline>
         </mj-text>
         <mj-text padding="0px 0px 4px 0px" color="#30579e" font-size="16px" font-family="Figtree, Arial, sans-serif" font-weight="400" line-height="24px" align="left" text-decoration="none">
-          <lp-singleline><img class="inline-image" src="./I136_842_65_139_37_112_37_110.png" width="16" height="24" align="left" style="margin-right:10px;" lp-edit lp-resizable /> Ut enim ad minim veniam.</lp-singleline>
+          <lp-singleline><img class="inline-image" src="./images/I136_842_65_139_37_112_37_110.png" width="16" height="24" align="left" style="margin-right:10px;" lp-edit lp-resizable /> Ut enim ad minim veniam.</lp-singleline>
         </mj-text>
         <mj-spacer height="24px">
         </mj-spacer>
@@ -193,7 +296,7 @@
           </H3>
         </mj-text>
         <mj-text color="#353842" font-size="16px" font-family="Figtree, Arial, sans-serif" font-weight="400" line-height="24px" align="left" text-decoration="none">
-          <lp-multiline lp-label="Content"><img class="inline-image" src="./I117_1052_115_1035_37_172_37_110.png" width="322" height="110" align="right" hspace="10" vspace="10" lp-edit lp-resizable /> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi tristique, arcu ut consectetur ultricies, purus felis vestibulum erat, laoreet pharetra dolor diam sed diam. Vestibulum volutpat dolor at lorem varius volutpat. Pellentesque lacinia varius efficitur. Aenean mollis, metus non pretium interdum, orci urna euismod ex, elementum volutpat mi neque at quam. Sed congue tincidunt lorem, sit amet egestas neque egestas in. Duis varius sit amet magna ut porta. Proin quis euismod metus, id mollis lacus. Donec ultrices leo auctor ligula vehicula, eu aliquet sapien sodales. Suspendisse blandit ipsum eu urna egestas porta. Nulla sed eleifend ex. Fusce consectetur ornare risus, eget porta nunc malesuada nec.</lp-multiline>
+          <lp-multiline lp-label="Content"><img class="inline-image" src="./images/I117_1052_115_1035_37_172_37_110.png" width="322" height="110" align="right" hspace="10" vspace="10" lp-edit lp-resizable /> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi tristique, arcu ut consectetur ultricies, purus felis vestibulum erat, laoreet pharetra dolor diam sed diam. Vestibulum volutpat dolor at lorem varius volutpat. Pellentesque lacinia varius efficitur. Aenean mollis, metus non pretium interdum, orci urna euismod ex, elementum volutpat mi neque at quam. Sed congue tincidunt lorem, sit amet egestas neque egestas in. Duis varius sit amet magna ut porta. Proin quis euismod metus, id mollis lacus. Donec ultrices leo auctor ligula vehicula, eu aliquet sapien sodales. Suspendisse blandit ipsum eu urna egestas porta. Nulla sed eleifend ex. Fusce consectetur ornare risus, eget porta nunc malesuada nec.</lp-multiline>
         </mj-text>
       </mj-column>
     </mj-section>
@@ -205,7 +308,7 @@
     </mj-raw>
     <mj-section background-color="#ffffff" padding="24px 24px 24px 24px">
       <mj-column width="200px" vertical-align="top">
-        <mj-image src="./I119_1508_119_1479_2004_984.png" alt="" css-class="lp-edit" fluid-on-mobile="true" align="left" border-radius="8px" width="200px">
+        <mj-image src="./images/I119_1508_119_1479_2004_984.png" alt="" css-class="lp-edit" fluid-on-mobile="true" align="left" border-radius="8px" width="200px">
         </mj-image>
       </mj-column>
       <mj-column width="16px" vertical-align="top">
@@ -231,7 +334,7 @@
     </mj-raw>
     <mj-section background-color="#ffffff" padding="16px 24px 16px 24px">
       <mj-column vertical-align="top">
-        <mj-image src="./I120_1643_41_255_2004_984.png" alt="" css-class="lp-edit" fluid-on-mobile="true" align="center" border-radius="8px" width="652px">
+        <mj-image src="./images/I120_1643_41_255_2004_984.png" alt="" css-class="lp-edit" fluid-on-mobile="true" align="center" border-radius="8px" width="652px">
         </mj-image>
       </mj-column>
     </mj-section>
@@ -327,7 +430,7 @@
     </mj-raw>
     <mj-section background-color="#ffffff" padding="24px 24px 24px 24px">
       <mj-column width="318px" vertical-align="top">
-        <mj-image src="./I117_1372_117_1334_2004_984.png" alt="" css-class="lp-edit" fluid-on-mobile="true" align="left" border-radius="8px" width="318px">
+        <mj-image src="./images/I117_1372_117_1334_2004_984.png" alt="" css-class="lp-edit" fluid-on-mobile="true" align="left" border-radius="8px" width="318px">
         </mj-image>
         <mj-text padding="16px 0px 8px 0px" color="#30579e" font-size="24px" font-family="Figtree, Arial, sans-serif" font-weight="700" line-height="28px" align="left" text-decoration="none">
           <H4>
@@ -343,7 +446,7 @@
         </mj-spacer>
       </mj-column>
       <mj-column width="318px" vertical-align="top">
-        <mj-image src="./I117_1372_117_1358_2004_984.png" alt="" css-class="lp-edit" fluid-on-mobile="true" align="left" border-radius="8px" width="318px">
+        <mj-image src="./images/I117_1372_117_1358_2004_984.png" alt="" css-class="lp-edit" fluid-on-mobile="true" align="left" border-radius="8px" width="318px">
         </mj-image>
         <mj-text padding="16px 0px 8px 0px" color="#30579e" font-size="24px" font-family="Figtree, Arial, sans-serif" font-weight="700" line-height="28px" align="left" text-decoration="none">
           <H4>
@@ -363,7 +466,7 @@
     </mj-raw>
     <mj-section background-color="#ffffff" padding="16px 24px 16px 24px">
       <mj-column width="318px" vertical-align="top">
-        <mj-image src="./I120_1655_119_1595_2004_984.png" alt="" css-class="lp-edit" fluid-on-mobile="true" align="center" border-radius="8px" width="318px">
+        <mj-image src="./images/I120_1655_119_1595_2004_984.png" alt="" css-class="lp-edit" fluid-on-mobile="true" align="center" border-radius="8px" width="318px">
         </mj-image>
       </mj-column>
       <mj-column width="16px" vertical-align="top">
@@ -371,7 +474,7 @@
         </mj-spacer>
       </mj-column>
       <mj-column width="318px" vertical-align="top">
-        <mj-image src="./I120_1655_119_1599_2004_984.png" alt="" css-class="lp-edit" fluid-on-mobile="true" align="center" border-radius="8px" width="318px">
+        <mj-image src="./images/I120_1655_119_1599_2004_984.png" alt="" css-class="lp-edit" fluid-on-mobile="true" align="center" border-radius="8px" width="318px">
         </mj-image>
       </mj-column>
     </mj-section>
@@ -383,7 +486,7 @@
     </mj-raw>
     <mj-section background-color="#ffffff" padding="16px 24px 16px 24px">
       <mj-column width="206.6666717529297px" vertical-align="top">
-        <mj-image src="./I120_1649_119_1624_2004_984.png" alt="" css-class="lp-edit" fluid-on-mobile="true" align="center" border-radius="8px" width="206.6666717529297px">
+        <mj-image src="./images/I120_1649_119_1624_2004_984.png" alt="" css-class="lp-edit" fluid-on-mobile="true" align="center" border-radius="8px" width="206.6666717529297px">
         </mj-image>
       </mj-column>
       <mj-column width="16px" vertical-align="top">
@@ -391,7 +494,7 @@
         </mj-spacer>
       </mj-column>
       <mj-column width="206.66665649414062px" vertical-align="top">
-        <mj-image src="./I120_1649_119_1628_2004_984.png" alt="" css-class="lp-edit" fluid-on-mobile="true" align="center" border-radius="8px" width="206.66665649414062px">
+        <mj-image src="./images/I120_1649_119_1628_2004_984.png" alt="" css-class="lp-edit" fluid-on-mobile="true" align="center" border-radius="8px" width="206.66665649414062px">
         </mj-image>
       </mj-column>
       <mj-column width="16px" vertical-align="top">
@@ -399,7 +502,7 @@
         </mj-spacer>
       </mj-column>
       <mj-column width="206.66665649414062px" vertical-align="top">
-        <mj-image src="./I120_1649_119_1637_2004_984.png" alt="" css-class="lp-edit" fluid-on-mobile="true" align="center" border-radius="8px" width="206.66665649414062px">
+        <mj-image src="./images/I120_1649_119_1637_2004_984.png" alt="" css-class="lp-edit" fluid-on-mobile="true" align="center" border-radius="8px" width="206.66665649414062px">
         </mj-image>
       </mj-column>
     </mj-section>
@@ -486,12 +589,15 @@
           </H4>
         </mj-text>
         <mj-text font-size="16px" line-height="24px" align="left" text-decoration="none">
-          <lp-multiline lp-label="Contactgegevens"> Gemeentehuis Park 1, Made 14 0162 gemeente@drimmelen.nl www.drimmelen.nl</lp-multiline>
+          <lp-multiline lp-label="Contactgegevens">
+            Gemeentehuis<br/>
+            Park 1, Made<br/>
+            <br/>
+            14 0162<br/>
+            gemeente@drimmelen.nl<br/>
+            www.drimmelen.nl
+          </lp-multiline>
         </mj-text>
-        <mj-column padding="24px 0px 0px 0px">
-          <mj-group>
-          </mj-group>
-        </mj-column>
         <mj-divider border-width="1px" border-color="#dee2e6" padding="16px 0px 16px 0px" width="100%">
         </mj-divider>
         <mj-text padding="0px 24px 0px 24px" color="#353842" font-size="12px" font-family="Figtree, Arial, sans-serif" font-weight="400" line-height="16px" align="center" text-decoration="none">
@@ -500,4 +606,4 @@
       </mj-column>
     </mj-section>
   </mj-body>
-</mjml>
+  </mjml>
