--- a/Drimmelen/default.mjml
+++ b/Drimmelen/default.mjml
@@ -530,12 +530,12 @@
         <table border="0" cellpadding="0" cellspacing="0" role="presentation" width="100%">
           <tbody>
             <tr>
-              <td align="left" width="1"
+              <td align="left"
                 style="background:#fd81c4;font-size:0;padding:4px 8px;word-break:break-word;border-radius:4px">
-                <div style="color:#1e3c67;font-family:Figtree, Arial, sans-serif;font-size:12px;font-weight:400;line-height:16px;text-align:left;text-decoration:none;white-space:nowrap">
+                <div style="color:#1e3c67;font-family:Figtree, Arial, sans-serif;font-size:12px;font-weight:400;line-height:16px;text-align:left;text-decoration:none;white-space:nowrap;display:inline-block">
                   <lp-singleline lp-label="Datum">28 jul. 2025</lp-singleline></div>
               </td>
-              <td>&nbsp;</td>
+              <td width="100%">&nbsp;</td>
             </tr>
           </tbody>
         </table>
