min-width badge

--- a/Drimmelen/default.mjml
+++ b/Drimmelen/default.mjml
@@ -532,7 +532,7 @@
             <tr>
               <td align="left"
                 style="background:#fd81c4;font-size:0;padding:4px 8px;word-break:break-word;border-radius:4px">
-                <div style="color:#1e3c67;font-family:Figtree, Arial, sans-serif;font-size:12px;font-weight:400;line-height:16px;text-align:left;text-decoration:none;white-space:nowrap;display:inline-block">
+                <div style="color:#1e3c67;font-family:Figtree, Arial, sans-serif;font-size:12px;font-weight:400;line-height:16px;text-align:left;text-decoration:none;white-space:nowrap;display:inline-block;min-width:fit-content;">
                   <lp-singleline lp-label="Datum">28 jul. 2025</lp-singleline></div>
               </td>
               <td width="100%">&nbsp;</td>
