--- a/Drimmelen/default.mjml
+++ b/Drimmelen/default.mjml
@@ -88,7 +88,8 @@
         }
 
         .lp-toc img {
-          height: 24px !important
+          height: 24px !important;
+          max-height: 24px !important;
         }
 
         .lp-toc-link, .lp-toc-link a {
