--- a/Drimmelen/default.mjml
+++ b/Drimmelen/default.mjml
@@ -102,6 +102,10 @@
           text-decoration:none
         }
 
+        .inline-image {
+          border-radius: 8px;
+        }
+
         @media screen and (max-width:700px) {
           .inline-image {
             display: block !important;
@@ -211,7 +215,9 @@
       </mj-column>
     </mj-section>
     <mj-raw>
-      <img src="./images/wave-repeat-x-blauw.png" alt="" border="0" width="1000" style="width:100%; max-width:100%; display:block; margin: 0 auto;"/>
+      <center>
+        <img src="./images/wave-repeat-x-blauw.png" alt="" border="0" width="1000" style="width:100%; max-width:100%; display:block; margin: 0 auto;"/>
+      </center>
     </mj-raw>
     <mj-raw>
       </lp-layout>
@@ -611,7 +617,9 @@
       </mj-column>
     </mj-section>
     <mj-raw>
-      <img src="./images/wave-repeat-x.png" alt="" border="0" width="1000" style="width:100%; max-width:100%; display:block; margin: 0 auto;"/>
+      <center>
+        <img src="./images/wave-repeat-x.png" alt="" border="0" width="1000" style="width:100%; max-width:100%; display:block; margin: 0 auto;"/>
+      </center>
     </mj-raw>
     <mj-section full-width="full-width" background-color="#d9f5d6" padding="24px 24px 24px 24px">
       <mj-column>
