dark mode wave image

--- a/Drimmelen/default.mjml
+++ b/Drimmelen/default.mjml
@@ -216,7 +216,7 @@
     </mj-section>
     <mj-raw>
       <center>
-        <img src="./images/wave-repeat-x-blauw.png" alt="" border="0" width="1000" style="width:100%; max-width:100%; display:block; margin: 0 auto;"/>
+        <img src="./images/wave-repeat-x_alt.png" alt="" border="0" width="1000" style="width:100%; max-width:100%; display:block; margin: 0 auto;background-color:#beddfc;"/>
       </center>
     </mj-raw>
     <mj-raw>
