--- a/Drimmelen/default.mjml
+++ b/Drimmelen/default.mjml
@@ -619,8 +619,8 @@
       </mj-column>
     </mj-section>
     <mj-raw>
-      <center>
-        <img src="./images/wave-repeat-x.png" alt="" border="0" width="2000" style="width:100%; max-width:100%; display:block; margin: 0 auto;"/>
+      <center style="background-color:#d9f5d6;">
+        <img src="./images/wave-repeat-x_alt-down.png" alt="" border="0" width="2000" style="width:100%; max-width:100%; display:block; margin: 0 auto;"/>
       </center>
     </mj-raw>
     <mj-section full-width="full-width" background-color="#d9f5d6" padding="24px 24px 24px 24px">
